--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
   }
